<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    android:orientation="vertical"
    tool:context=".MoviesDetails">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/img1" />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/film_title"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8.3dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/film_overview"
                android:textColor="@color/graylight1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/moviesId"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12.sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15.5dp"
                android:background="@color/lightgray" />

            <LinearLayout
                android:background="@color/backgroud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="19.5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sf_pro_display_medium"
                            android:text="@string/film_language"
                            android:layout_gravity="center"
                            android:textColor="@color/blue"
                            android:textSize="11.7sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:textAlignment="center"
                        android:fontFamily="@font/sfpro_display_bold"
                        android:text="@string/film_language_value"
                        android:textColor="@color/blue"
                        android:textSize="12.3sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:fontFamily="@font/sf_pro_display_medium"
                            android:text="@string/film_popularity"
                            android:layout_gravity="center"
                            android:textColor="@color/blue"
                            android:textSize="11.7sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/releasedate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/sfpro_display_bold"
                        android:text="@string/film_popularity_value"
                        android:textColor="@color/blue"
                        android:textSize="12.sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>